--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
-.DS_Store
-node_modules/
+# Ignorar todas las imágenes
+*.jpg
+*.jpeg
+*.png
+*.gif
+*.bmp
+*.svg
+
+# Ignorar la carpeta de imágenes
+img/
